# rust-actix-web

./: Cargo.toml  build.rs
src/: main.rs  models.rs
src/handlers/: handlers.rs  handlers_impl.rs  mod.rs
src/models/: error.rs  post.rs
web/: index.html
