[package]
name = "thoughfee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-web-static-files = "4.0"
static-files = "0.2"

[build-dependencies]
static-files = "0.2"