[package]
name = "rust-actix-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-web-static-files = "4.0"
static-files = "0.2"
actix-http = "3.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
static-files = "0.2"